# vct

./: .gitignore  CMakeLists.txt  README.md
include/: vct.h
include/vct/: vct.h
src/: vct.c
tests/: CMakeLists.txt  freestanding.c  itm.c  playg.c  push_pop_get_iterate.c
